2000-01-15  Alan Modra  <alan@spri.levels.unisa.edu.au>

	* gas/i386/general.{s,l}: Add jmp and call tests for .code16gcc,
	.code16, and .code32 modes.

Tue Nov 30 23:02:01 1999  Jeffrey A Law  (law@cygnus.com)

	* gas/mn10300/{am33.s, am33_2.s, am33_3.s}: New test files.
	* gas/mn10300/{am33_4.s, am33_5.s, am33_6.s}: Likewise.
	* gas/mn10300/{am33_7.s, am33_8.s}: Likewise.
	* gas/mn10300/basic.exp: Run the am33 tests.

1999-11-15  Gavin Romig-Koch  <gavin@cygnus.com>

	* gas/mips/la.d: Adjust for new la macro expansion.
	Change matches for explicit addresses to matches for
	any address.
	* gas/mips/la-xgot.d: Same.
	* gas/mips/la-svr4pic.d: Same.

1999-11-01  Nick Clifton  <nickc@cygnus.com>

	Remove reloc generating references to local labels in test code.
	Some ARM targets (eg PE) generate a reloc based on the label,
	whilst others (eg ELF) generate a reloc based on the section
	symbol.  This meant that the disassembled outputs would differ.
	
	* gas/arm/inst.s: Change test of BLPL instruction.
	* gas/arm/inst.d: Change expected decode of BLPL instruction.
	* gas/arm/arm7t.s: Remove use of .LC0 label in .word directive.
	Remove .rdata section, since this cannot exist in an arm-aout
	target.
	* gas/arm/arm7t.d: Change expected reloc generated for .word
	directive.

1999-10-21  Nick Clifton  <nickc@cygnus.com>

	* gas/arm/arm7t.d: Update to match latest objdump output.
	* gas/arm/inst.s: Fix erroneous test case.
	* gas/arm/inst.d: Update to match latest objdump output.

Mon Oct 11 13:37:51 1999  Geoffrey Keating  <geoffk@cygnus.com>

	* lib/gas-defs.exp (regexp_diff): Allow '#...' to mean "some
 	indeterminate number of extra lines here".

	* gas/elf/elf.exp: Remove XFAILs.
	* gas/elf/section0.d: Make pass on MIPS (and hopefully alpha).
	* gas/elf/section1.d: Likewise.

Thu Oct  7 00:12:04 MDT 1999	Diego Novillo <dnovillo@cygnus.com>

	* gas/d10v: New directory.
	* gas/d10v/d10.exp: New file.
	* gas/d10v/inst.s: New file.
	* gas/d10v/inst.d: New file.
